tdf#107852 Support DisplayName property for table styles

Change-Id: I62bfdbea0a1bc62677d5fe25043e9251811b3ac7